[AES-388][FIX] qr code not centered

--- a/static/src/css/tpl_guardian_qrcodes_wizard_report.css
+++ b/static/src/css/tpl_guardian_qrcodes_wizard_report.css
@@ -34,7 +34,8 @@
 .qr_guardian_name{
     position: absolute;
     top: 40mm;
-    left: 18mm;
-    width: 35mm;
+    left: 0px;
+    width: 100%;
     height: 10mm;
+    text-align: center;
 }
